feat(52): create API contract for retrieving user boards
