# application/rest-api-adapter/src/main/java/io/gebio/gebioback/rest/api/adapter/controller/UserController.java
@@ -6,11 +6,13 @@ import io.gebio.gebioback.contract.api.UserApi;
 import io.gebio.gebioback.contract.model.CreateGuestRequestContract;
 import io.gebio.gebioback.contract.model.CreateGuestResponseContract;
 import io.gebio.gebioback.contract.model.CurrentUserResponseContract;
+import io.gebio.gebioback.contract.model.FindBoardsResponseContract;
 import io.gebio.gebioback.domain.model.User;
 import io.gebio.gebioback.domain.port.in.UserFacade;
 import io.gebio.gebioback.rest.api.adapter.mapper.UserContractMapper;
 import io.gebio.gebioback.rest.api.adapter.service.AuthenticationService;
 import java.net.URI;
+import java.util.UUID;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 
@@ -41,6 +43,11 @@ public class UserController implements UserApi {
     return ResponseEntity.created(location).body(
       UserContractMapper.createGuestFromDomainToContract(createdGuest)
     );
+  }
+
+  @Override
+  public ResponseEntity<FindBoardsResponseContract> findBoards(UUID userId) {
+    return null;
   }
 
   @Override
